# matcher-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  cliff.toml
.github/workflows/: audit.yml  build.yml  bump_version.yml  clippy.yml  release.yml  test.yml
docker/: dev.Dockerfile
git-hooks/: commit-msg  pre-commit  pre-push
matcher-derive/: Cargo.toml
matcher-derive-impl/: Cargo.toml
matcher-derive-impl/src/: parse_struct.rs  utils.rs
matcher-derive/src/: lib.rs
matcher-test/: Cargo.toml
matcher-test/tests/: partial-config.yml
scripts/: bump-dependency-version.sh  bump-version.sh  bump-versions.sh  create-release.sh  get-dependency-version.sh  get-next-version.sh  get-version.sh  init-dev-env.sh  utils.sh  vars.sh
