[workspace]
members = [
    "packages/matcher-test",
    "packages/matcher-derive",
    "packages/matcher-derive-impl"
]
resolver = "2"

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[patch.crates-io]
matcher-derive = { path = "./packages/matcher-derive" }
matcher-derive-impl = { path = "./packages/matcher-derive-impl" }
